# mini-engine-raylib

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: system_order_updates.txt
editor/: CMakeLists.txt
editor/include/editor/core/: editor_app.hpp
editor/include/editor/panels/: content_browser_panel.hpp  scene_hierarchy_panel.hpp
editor/include/editor/utils/: file_dialogs.hpp
editor/src/: main.cpp
editor/src/core/: editor_app.cpp
editor/src/panels/: content_browser_panel.cpp  scene_hierarchy_panel.cpp
editor/src/utils/: file_dialogs.cpp
engine/: CMakeLists.txt
engine/include/: Animation.hpp  Assets.hpp  Audio.hpp  CameraFollow.hpp  CameraSystem.hpp  Color.hpp  Components.hpp  DebugDraw.hpp  Engine.hpp  Entity.hpp  GameApp.hpp  GameScene.hpp  Input.hpp  InputDefaults.hpp  LifetimeSystem.hpp  Math.hpp  Physics2D.hpp  Pool.hpp  ProjectileSystem.hpp  Registry.hpp  Render2D.hpp  Render3D.hpp  Scene.hpp  SceneManager.hpp  Time.hpp
engine/include/mini-engine-raylib/assets/: assets.hpp
engine/include/mini-engine-raylib/audio/: audio.hpp
engine/include/mini-engine-raylib/core/: application.hpp  engine.hpp  math.hpp  time.hpp  vfs.hpp
engine/include/mini-engine-raylib/ecs/: components.hpp  script_component.hpp  system.hpp
engine/include/mini-engine-raylib/input/: input.hpp  input_defaults.hpp
engine/include/mini-engine-raylib/render/: camera_system.hpp  color.hpp  renderer.hpp
engine/include/mini-engine-raylib/scene/: game_scene.hpp  scene.hpp  scene_manager.hpp
engine/include/mini-engine-raylib/scripting/: script_manager.hpp
engine/include/mini-engine-raylib/systems/: camera_system.hpp  script_system.hpp  transform_system.hpp
engine/src/: Animation.cpp  Assets.cpp  AssetsInternal.hpp  Audio.cpp  CameraFollow.cpp  CameraSystem.cpp  Components.cpp  ComponentsAnimation.cpp  ComponentsCamera.cpp  ComponentsInternal.hpp  ComponentsPhysics.cpp  DebugDraw.cpp  Engine.cpp  Entity.cpp  GameApp.cpp  Input.cpp  InputDefaults.cpp  LifetimeSystem.cpp  Physics2D.cpp  ProjectileSystem.cpp  Registry.cpp  Registry.hpp  Render2D.cpp  Render3D.cpp  Scene.cpp  SceneManager.cpp  Time.cpp
engine/src/assets/: assets.cpp  assets_internal.hpp
engine/src/audio/: audio.cpp
engine/src/core/: engine.cpp  time.cpp  vfs.cpp
engine/src/input/: input.cpp  input_defaults.cpp
engine/src/render/: camera_system.cpp  renderer.cpp
engine/src/scene/: scene.cpp  scene_manager.cpp
engine/src/scripting/: script_manager.cpp
engine/src/systems/: script_system.cpp  transform_system.cpp
sandbox/: CMakeLists.txt
sandbox/assets/scripts/: rotator.lua
sandbox/include/sandbox/core/: game.hpp
sandbox/include/sandbox/scene/: testscene.hpp
sandbox/src/: Resource.hpp  main.cpp
sandbox/src/core/: game.cpp
sandbox/src/generators/: AsteroidGenerator.cpp  AsteroidGenerator.hpp
sandbox/src/objects/: Asteroid.hpp  AsteroidBasalt.hpp  AsteroidCrystal.hpp  AsteroidIron.hpp  GameObject.hpp  LaserProjectile.hpp  Player.hpp  Projectile.hpp  ResourcePickup.hpp
sandbox/src/scene/: testscene.cpp
sandbox/src/scenes/: BaseScene.hpp  PlanetScene.hpp  UniverseScene.hpp
sandbox/src/utils/: RNG.hpp
